--- a/css/style.css
+++ b/css/style.css
@@ -108,13 +108,72 @@ body {
 				-webkit-box-pack: center;
 				    -ms-flex-pack: center;
 				        justify-content: center;
+				margin: 0px 0px 15px;
 }
 .main__text {
 				text-align: center;
+				font-size: 25px;
+				margin: 0px 0px 10px;
 }
 .main__button {
-				text-align: center;
+				margin: 0px auto;
+				margin: 0px 0px 15px;
 }
 .main__table {
 				text-align: center;
+				float: middle;
+				clear: both;
+}
+
+table, th, td {
+				float: middle;
+				clear: both;
+				font-size: 30px;
+				border: 1px solid #000;
+}
+
+table {
+				width: 100%;
+}
+
+.button__body {
+				-webkit-transition: all 0.3s linear;
+				-o-transition: all 0.3s linear;
+				transition: all 0.3s linear;
+				border-radius: 30px;
+				width: 200px;
+				height: 50px;
+				border: 3px solid black;
+				margin: 0px auto;
+				background: #db0303;
+				color: white;
+}
+.button__body:hover {
+				background: #8a8a8a;
+				color: #db0303;
+				border: 2px solid #db0303;
+}
+.button__body:active {
+				background: #494949;
+				color: #da5353;
+}
+.button__text {
+				color: white;
+				font-size: 30px;
+				margin: 10px 0px 0px;
+				display: -webkit-box;
+				display: -ms-flexbox;
+				display: flex;
+				-webkit-box-pack: center;
+				    -ms-flex-pack: center;
+				        justify-content: center;
+				-webkit-box-align: center;
+				    -ms-flex-align: center;
+				        align-items: center;
+}
+.button__text:hover {
+				color: #db0303;
+}
+.button__text:active {
+				color: #da5353;
 }
