--- a/css/style.css
+++ b/css/style.css
@@ -72,11 +72,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-				background-color: cyan;
+				background: url("https://www.fg-a.com/wallpapers/white-background-diamond-plate-th.jpg");
 }
 
 .container {
-				max-width: 1000px;
+				padding: 5px 10px 5px;
+				background: #dedede;
+				max-width: 1400px;
 				margin: 0px auto;
 				height: 100%;
 				display: -webkit-box;
@@ -136,44 +138,27 @@ table {
 				width: 100%;
 }
 
-.button__body {
-				-webkit-transition: all 0.3s linear;
-				-o-transition: all 0.3s linear;
-				transition: all 0.3s linear;
-				border-radius: 30px;
+.button__text {
 				width: 200px;
 				height: 50px;
+				padding: 6px 0px 0px;
+				text-align: center;
+				font-size: 30px;
+				-webkit-transition: all 0.2s linear;
+				-o-transition: all 0.2s linear;
+				transition: all 0.2s linear;
+				border-radius: 30px;
 				border: 3px solid black;
 				margin: 0px auto;
 				background: #db0303;
 				color: white;
 }
-.button__body:hover {
+.button__text:hover {
 				background: #8a8a8a;
 				color: #db0303;
 				border: 2px solid #db0303;
 }
-.button__body:active {
-				background: #494949;
-				color: #da5353;
-}
-.button__text {
-				color: white;
-				font-size: 30px;
-				margin: 8px 0px 0px;
-				display: -webkit-box;
-				display: -ms-flexbox;
-				display: flex;
-				-webkit-box-pack: center;
-				    -ms-flex-pack: center;
-				        justify-content: center;
-				-webkit-box-align: center;
-				    -ms-flex-align: center;
-				        align-items: center;
-}
-.button__text:hover {
-				color: #db0303;
-}
 .button__text:active {
+				background: #494949;
 				color: #da5353;
 }
