--- a/css/style.css
+++ b/css/style.css
@@ -77,12 +77,12 @@ body {
 
 .container {
 				padding: 0px 10px 5px;
-				background: #f2f9fe;
-				background: -webkit-gradient(linear, left top, left bottom, from(#f2f9fe), to(#d6f0fd));
-				background: -o-linear-gradient(top, #f2f9fe 0%, #d6f0fd 100%);
-				background: linear-gradient(to bottom, #f2f9fe 0%, #d6f0fd 100%);
-				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#f2f9fe", endColorstr="#d6f0fd",GradientType=0 );
-				max-width: 1400px;
+				background: #f6e6b4;
+				background: -webkit-gradient(linear, left top, left bottom, from(#f6e6b4), to(#ed9017));
+				background: -o-linear-gradient(top, #f6e6b4 0%, #ed9017 100%);
+				background: linear-gradient(to bottom, #f6e6b4 0%, #ed9017 100%);
+				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#f6e6b4", endColorstr="#ed9017",GradientType=0 );
+				max-width: 1440px;
 				margin: 0px auto;
 				height: 100%;
 				display: -webkit-box;
@@ -98,11 +98,11 @@ body {
 				margin: 0px 0px 25px;
 				border-radius: 0px 0px 30px 30px;
 				padding: 0px 5px 10px;
-				background: #feccb1;
-				background: -webkit-gradient(linear, left top, left bottom, from(#feccb1), color-stop(0%, #f17432), color-stop(100%, #ea5507), to(#fb955e));
-				background: -o-linear-gradient(top, #feccb1 0%, #f17432 0%, #ea5507 100%, #fb955e 100%);
-				background: linear-gradient(to bottom, #feccb1 0%, #f17432 0%, #ea5507 100%, #fb955e 100%);
-				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#feccb1", endColorstr="#fb955e",GradientType=0 );
+				background: rgb(178, 225, 255);
+				background: -o-radial-gradient(center, ellipse, rgb(178, 225, 255) 0%, rgb(102, 182, 252) 100%);
+				background: radial-gradient(ellipse at center, rgb(178, 225, 255) 0%, rgb(102, 182, 252) 100%);
+				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#b2e1ff", endColorstr="#66b6fc",GradientType=1 );
+				border: 1px solid #000;
 }
 .top__title {
 				font-size: 40px;
@@ -117,12 +117,12 @@ body {
 .image-slider {
 				height: 680px;
 				border-radius: 30px;
-				margin: 0px 0px 40px;
-				background: #feccb1;
-				background: -webkit-gradient(linear, left top, left bottom, from(#feccb1), color-stop(0%, #f17432), color-stop(100%, #ea5507), to(#fb955e));
-				background: -o-linear-gradient(top, #feccb1 0%, #f17432 0%, #ea5507 100%, #fb955e 100%);
-				background: linear-gradient(to bottom, #feccb1 0%, #f17432 0%, #ea5507 100%, #fb955e 100%);
-				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#feccb1", endColorstr="#fb955e",GradientType=0 );
+				margin: 0px 0px 20px;
+				background: rgb(178, 225, 255);
+				background: -o-radial-gradient(center, ellipse, rgb(178, 225, 255) 0%, rgb(102, 182, 252) 100%);
+				background: radial-gradient(ellipse at center, rgb(178, 225, 255) 0%, rgb(102, 182, 252) 100%);
+				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#b2e1ff", endColorstr="#66b6fc",GradientType=1 );
+				border: 1px solid #000;
 }
 .image-slider__slide {
 				display: -webkit-box;
@@ -194,12 +194,24 @@ body {
 						height: 499px; */
 }
 .main__text {
+				padding: 5px 0px 5px;
 				text-align: center;
 				font-size: 25px;
-				margin: 0px 0px 10px;
+				margin: 20px 0px 20px;
+				border-radius: 30px;
+				background: rgb(178, 225, 255);
+				background: -o-radial-gradient(center, ellipse, rgb(178, 225, 255) 0%, rgb(102, 182, 252) 100%);
+				background: radial-gradient(ellipse at center, rgb(178, 225, 255) 0%, rgb(102, 182, 252) 100%);
+				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#b2e1ff", endColorstr="#66b6fc",GradientType=1 );
+				border: 1px solid #000;
 }
 .main__button {
-				margin: 0px auto;
+				display: -webkit-box;
+				display: -ms-flexbox;
+				display: flex;
+				-webkit-box-pack: center;
+				    -ms-flex-pack: center;
+				        justify-content: center;
 				margin: 0px 0px 15px;
 }
 .main__table {
@@ -207,19 +219,21 @@ body {
 				float: middle;
 				clear: both;
 }
-
-table, th, td {
-				float: middle;
-				clear: both;
-				font-size: 30px;
-				border: 1px solid #000;
+.main__content {
+				margin: 0px auto;
 }
-
-table {
+.main__foto {
+				margin: 0px auto;
+				max-height: 1000px;
 				width: 100%;
+				border-radius: 30px;
 }
 
+.button__body {
+				border-radius: 30px;
+}
 .button__text {
+				display: inline-block;
 				width: 200px;
 				height: 50px;
 				padding: 6px 0px 0px;
@@ -242,4 +256,41 @@ table {
 .button__text:active {
 				background: rgb(73, 73, 73);
 				color: rgb(218, 83, 83);
+}
+
+th, td {
+				background: rgb(178, 225, 255);
+				background: -o-radial-gradient(center, ellipse, rgb(178, 225, 255) 0%, rgb(102, 182, 252) 100%);
+				background: radial-gradient(ellipse at center, rgb(178, 225, 255) 0%, rgb(102, 182, 252) 100%);
+				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#b2e1ff", endColorstr="#66b6fc",GradientType=1 );
+				border: 1px solid #000;
+				float: middle;
+				clear: both;
+				font-size: 25px;
+				border: 12px solid rgba(0, 0, 0, 0);
+				padding: 10px 0px;
+}
+
+table {
+				width: 100%;
+				margin: 0px 0px 10px;
+				border: 5px solid rgba(0, 0, 0, 0);
+				border-radius: 30px;
+				background: #ff0000;
+				background: -o-radial-gradient(center, ellipse, #ff0000 0%, #6cff5b 13%, #3affee 28%, #ff3ae4 43%, #3a47ff 65%, #ffff00 99%);
+				background: radial-gradient(ellipse at center, #ff0000 0%, #6cff5b 13%, #3affee 28%, #ff3ae4 43%, #3a47ff 65%, #ffff00 99%);
+				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#ff0000", endColorstr="#ffff00",GradientType=1 );
+}
+
+.table__block_left-top {
+				border-radius: 30px 0px 0px 0px;
+}
+.table__block_right-top {
+				border-radius: 0px 30px 0px 0px;
+}
+.table__block_left-bottom {
+				border-radius: 0px 0px 0px 30px;
+}
+.table__block_right-bottom {
+				border-radius: 0px 0px 30px 0px;
 }
